DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/Custom_Chart_Field__c.object-meta.xml
<CustomObject>
    <label>Custom Chart Field</label>
    <nameField>
        <label>Custom Chart Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Chart Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>