DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/fields/Chart_Field_Number__c.field-meta.xml
<CustomField>
    <fullName>Chart_Field_Number__c</fullName>
    <label>Chart Field Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>