DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/fields/Custom_Chart_Field_Number_B__c.field-meta.xml
<CustomField>
    <fullName>Custom_Chart_Field_Number_B__c</fullName>
    <label>Custom Chart Field Number B</label>
    <length>3</length>
    <type>Text</type>
</CustomField>