DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/fields/Custom_Chart_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Custom_Chart_Related_Object__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Custom Chart Related Object</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The related object must belong to the same custom chart.</errorMessage>
        <filterItems>
            <field>Custom_Chart_Related_Object__c.Custom_Chart__c</field>
            <operation>equals</operation>
            <valueField>$Source.Custom_Chart__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Custom_Chart_Related_Object__c</referenceTo>
    <relationshipLabel>Custom Chart Fields</relationshipLabel>
    <relationshipName>Custom_Chart_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>