DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/fields/Display_Color_Hex_Code__c.field-meta.xml
<CustomField>
    <fullName>Display_Color_Hex_Code__c</fullName>
    <formula>CASE(TEXT(Display_Color__c), &quot;Aqua&quot;, &quot;00FFFF&quot;, &quot;Blue&quot;, &quot;0000FF&quot;, &quot;Brown&quot;, &quot;A52A2A&quot;, &quot;Cyan&quot;, &quot;00FFFF&quot;, &quot;Dark Blue&quot;, &quot;00008B&quot;, &quot;Dark Green&quot;, &quot;006400&quot;, &quot;Dark Red&quot;, &quot;8B0000&quot;, &quot;Gray&quot;, &quot;808080&quot;, &quot;Green&quot;, &quot;008000&quot;, &quot;Lime&quot;, &quot;00FF00&quot;, &quot;Orange&quot;, &quot;FFA500&quot;, &quot;Pink&quot;, &quot;FFC0CB&quot;, &quot;Purple&quot;, &quot;800080&quot;, &quot;Red&quot;, &quot;FF0000&quot;, &quot;Yellow&quot;, &quot;FFFF00&quot;, &quot;0000FF&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Color Hex Code</label>
    <type>Text</type>
</CustomField>