DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/fields/Display_On_Chart__c.field-meta.xml
<CustomField>
    <fullName>Display_On_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display On Chart</label>
    <type>Checkbox</type>
</CustomField>