DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/fields/Display_Order_By__c.field-meta.xml
<CustomField>
    <fullName>Display_Order_By__c</fullName>
    <label>Display Order By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>