DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/fields/In_Not_In_Values__c.field-meta.xml
<CustomField>
    <fullName>In_Not_In_Values__c</fullName>
    <label>In / Not In Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>