DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/fields/Is_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Date_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Date Field</label>
    <type>Checkbox</type>
</CustomField>