DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Subtract</fullName>
            </value>
            <value>
                <fullName>Multiply</fullName>
            </value>
            <value>
                <fullName>Divide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>