DigicielFull/force-app/main/default/objects/Custom_Chart_Field__c/validationRules/Field_API_Name_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_API_Name_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT( ISPICKVAL( Field_Use__c , &quot;Formula&quot; ) ), ISNULL( Field_API_Name__c ), FALSE)</errorConditionFormula>
    <errorDisplayField>Field_API_Name__c</errorDisplayField>
    <errorMessage>Field API Name is required for fields that are not &quot;Formula&quot;.</errorMessage>
</ValidationRule>